--- a/Grumpy.RipplesMQ.Sample.API/Grumpy.RipplesMQ.Sample.API.csproj
+++ b/Grumpy.RipplesMQ.Sample.API/Grumpy.RipplesMQ.Sample.API.csproj
@@ -42,6 +42,12 @@
     <Compile Include="DTOs\TripDto.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Grumpy.Common">
+      <Version>1.2.7</Version>
+    </PackageReference>
+    <PackageReference Include="Grumpy.Json">
+      <Version>1.2.3</Version>
+    </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Config">
       <Version>1.2.2</Version>
     </PackageReference>
