--- a/Grumpy.RipplesMQ.Sample.Broker2/Grumpy.RipplesMQ.Sample.Broker2.csproj
+++ b/Grumpy.RipplesMQ.Sample.Broker2/Grumpy.RipplesMQ.Sample.Broker2.csproj
@@ -45,8 +45,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Grumpy.Common">
+      <Version>1.2.7</Version>
+    </PackageReference>
+    <PackageReference Include="Grumpy.Json">
+      <Version>1.2.3</Version>
+    </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Server">
-      <Version>1.1.17</Version>
+      <Version>1.1.19</Version>
     </PackageReference>
     <PackageReference Include="Grumpy.ServiceBase">
       <Version>1.1.3</Version>
