--- a/Grumpy.RipplesMQ.Sample.Client1/Grumpy.RipplesMQ.Sample.Client1.csproj
+++ b/Grumpy.RipplesMQ.Sample.Client1/Grumpy.RipplesMQ.Sample.Client1.csproj
@@ -44,8 +44,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Grumpy.Common">
+      <Version>1.2.7</Version>
+    </PackageReference>
+    <PackageReference Include="Grumpy.Json">
+      <Version>1.2.3</Version>
+    </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Client">
-      <Version>1.2.5</Version>
+      <Version>1.2.8</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
