First actual working version of the sample :-)

--- a/Grumpy.RipplesMQ.Sample.Broker1/App.config
+++ b/Grumpy.RipplesMQ.Sample.Broker1/App.config
@@ -7,5 +7,6 @@
     <appSettings>
         <add key="DatabaseServer" value="(localdb)\MSSQLLocalDB"/>
         <add key="DatabaseName" value="RipplesMQ"/>
+        <add key="LogLevel" value="Warning"/>
     </appSettings>
 </configuration>
