--- a/Grumpy.RipplesMQ.Sample.Client1/Grumpy.RipplesMQ.Sample.Client1.csproj
+++ b/Grumpy.RipplesMQ.Sample.Client1/Grumpy.RipplesMQ.Sample.Client1.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -50,8 +51,14 @@
     <PackageReference Include="Grumpy.Json">
       <Version>1.2.3</Version>
     </PackageReference>
+    <PackageReference Include="Grumpy.Logging">
+      <Version>0.9.3</Version>
+    </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Client">
-      <Version>1.2.8</Version>
+      <Version>1.2.13</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console">
+      <Version>1.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
