--- a/Grumpy.RipplesMQ.Sample.Server1/Grumpy.RipplesMQ.Sample.Server1.csproj
+++ b/Grumpy.RipplesMQ.Sample.Server1/Grumpy.RipplesMQ.Sample.Server1.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -41,7 +42,9 @@
     <Compile Include="Server1Service.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Grumpy.Common">
@@ -50,11 +53,17 @@
     <PackageReference Include="Grumpy.Json">
       <Version>1.2.3</Version>
     </PackageReference>
+    <PackageReference Include="Grumpy.Logging">
+      <Version>0.9.3</Version>
+    </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Client">
-      <Version>1.2.8</Version>
+      <Version>1.2.13</Version>
     </PackageReference>
     <PackageReference Include="Grumpy.ServiceBase">
-      <Version>1.1.3</Version>
+      <Version>1.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console">
+      <Version>1.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
