--- a/Grumpy.RipplesMQ.Sample.Broker1/App.config
+++ b/Grumpy.RipplesMQ.Sample.Broker1/App.config
@@ -5,8 +5,10 @@
     </startup>
 
     <appSettings>
-        <add key="DatabaseServer" value="(localdb)\MSSQLLocalDB"/>
-        <add key="DatabaseName" value="RipplesMQ"/>
+        <add key="DatabaseServer2" value="(localdb)\MSSQLLocalDB"/>
+        <add key="DatabaseName2" value="RipplesMQ"/>
+        <add key="DatabaseServer" value="TD0620.tst-ressource.sdc.dk\TDSQL0620"/>
+        <add key="DatabaseName" value="ABJA_Ripples"/>
         <add key="LogLevel" value="Warning"/>
     </appSettings>
 </configuration>
