--- a/Grumpy.RipplesMQ.Sample.Broker2/Grumpy.RipplesMQ.Sample.Broker2.csproj
+++ b/Grumpy.RipplesMQ.Sample.Broker2/Grumpy.RipplesMQ.Sample.Broker2.csproj
@@ -55,7 +55,7 @@
       <Version>1.0.6</Version>
     </PackageReference>
     <PackageReference Include="Grumpy.RipplesMQ.Server">
-      <Version>1.1.44</Version>
+      <Version>1.1.58</Version>
     </PackageReference>
     <PackageReference Include="Grumpy.ServiceBase">
       <Version>1.1.16</Version>
@@ -63,6 +63,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console">
       <Version>1.1.2</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
