--- a/Grumpy.RipplesMQ.Sample.Broker2/App.config
+++ b/Grumpy.RipplesMQ.Sample.Broker2/App.config
@@ -6,8 +6,7 @@
 
     <appSettings>
         <add key="DatabaseServer" value="(localdb)\MSSQLLocalDB"/>
-        <add key="DatabaseServer1" value="TD0620.tst-ressource.sdc.dk\TDSQL0620"/>
-        <add key="DatabaseName" value="ABJA_Ripples"/>
+        <add key="DatabaseName" value="RipplesMQ"/>
         <add key="LogLevel" value="Warning"/>
     </appSettings>
 </configuration>
